kubernetes/service-my-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-my-web
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: my-web
